--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ h2{
   <body>
       <div class="cv-container">
         <div class="left-column">
-          <img class="portait" src="C:\Users\aitha\OneDrive\Bureau\DSC_4153.jpg" />
+          <img class="portait" src="https://github.com/Salahait11/Html/blob/main/DSC_4153.jpg?raw=true" />
           <div class="section">
             <p>
               <i class="icon fab fa-linkedin text-darkblue"></i> Aithammou-Salah
