--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <head>
     <title>Curriculum vitae</title>
     <meta charset="utf-8">
-    <meta name="viewport"content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport"content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <style>
+      /* Styles pour les petits écrans (jusqu'à 600 pixels) */
+@media screen and (max-width: 600px) {
+  /* Ajustements de style pour les petits écrans */
+}
+
+/* Styles pour les écrans de taille moyenne (601 à 900 pixels) */
+@media screen and (min-width: 601px) and (max-width: 900px) {
+  /* Ajustements de style pour les écrans de taille moyenne */
+}
+
+/* Styles pour les grands écrans (901 à 1200 pixels) */
+@media screen and (min-width: 901px) and (max-width: 1200px) {
+  /* Ajustements de style pour les grands écrans */
+}
+
+/* Styles pour les très grands écrans (au-delà de 1200 pixels) */
+@media screen and (min-width: 1201px) {
+  /* Ajustements de style pour les très grands écrans */
+}
         *{
   margin: 0;
   box-sizing: border-box;
